--- a/components/ShoppingCartTile.module.css
+++ b/components/ShoppingCartTile.module.css
@@ -74,8 +74,59 @@
   font-size: 1rem;
   cursor: pointer;
   transition: color 0.2s ease;
+  width: 100%;
+  text-align: center;
+  margin-top: 1rem;
 }
 
 .removeButton:hover {
   color: #0056b3;
+}
+
+@media (max-width: 430px) {
+  .flexContainer {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    justify-items: center;
+    text-align: center;
+  }
+
+  .imageWrapper {
+    width: 40%;
+    height: auto;
+    aspect-ratio: 1;
+  }
+
+  .contentContainer {
+    align-items: center;
+  }
+
+  .removeButton {
+    order: 1;
+    width: auto;
+  }
+}
+@media (max-width: 768px) {
+  .flexContainer {
+    gap: 1rem;
+    justify-items: center;
+    text-align: center;
+  }
+
+  .imageWrapper {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .contentContainer {
+    align-items: center;
+  }
+
+  .removeButton {
+    order: 1;
+    width: auto;
+  }
 }
