--- a/app/page.module.css
+++ b/app/page.module.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-bottom: 4rem;
+  margin: 4rem;
 }
 
 .heroTitle {
@@ -33,7 +33,7 @@
   color: #fff;
   border: none;
   border-radius: 12px;
-  font-size: 0.8rem;
+  font-size: 1.1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
   margin-top: 2rem;
